# rusty_tcl

./: .travis.yml  Cargo.toml  README.md  index.html
doc/: search-index.js
failure/: fn.err_msg.html  index.html  struct.Compat.html  struct.Error.html  trait.Fail.html  trait.ResultExt.html
failure_derive/: all.html  fn.Fail.html  index.html
rusty-tcl-sys/: Cargo.toml  README.md  build.rs  wrapper.h
rusty-tcl-sys/examples/: simple.rs
rusty_tcl/: all.html  index.html
rusty_tcl_sys/: NUM_STATIC_TOKENS.v.html  TCL_ALLOW_INLINE_COMPILATION.v.html  TCL_ALL_EVENTS.v.html  TCL_APPEND_VALUE.v.html  TCL_CLOSE_WRITE.v.html  TCL_CONTINUE.v.html  TCL_CONVERT_SYNTAX.v.html  TCL_CREATE_SYMBOLIC_LINK.v.html  TCL_CUSTOM_PTR_KEYS.v.html  TCL_DONT_QUOTE_HASH.v.html  TCL_DONT_USE_BRACES.v.html  TCL_DOUBLE_SPACE.v.html  TCL_ENCODING_END.v.html  TCL_ENCODING_START.v.html  TCL_EVAL_GLOBAL.v.html  TCL_EXACT.v.html  TCL_EXCEPTION.v.html  TCL_FINAL_RELEASE.v.html  TCL_GLOB_PERM_R.v.html  TCL_GLOB_PERM_W.v.html  TCL_GLOB_TYPE_DIR.v.html  TCL_GLOB_TYPE_FILE.v.html  TCL_GLOB_TYPE_PIPE.v.html  TCL_GLOB_TYPE_SOCK.v.html  TCL_HASH_KEY_SYSTEM_HASH.v.html  TCL_HASH_KEY_TYPE_VERSION.v.html  TCL_INTERP_DESTROYED.v.html  TCL_LINK_BOOLEAN.v.html  TCL_LINK_CHAR.v.html  TCL_LINK_FLOAT.v.html  TCL_LINK_READ_ONLY.v.html  TCL_LINK_SHORT.v.html  TCL_LINK_UCHAR.v.html  TCL_LINK_USHORT.v.html  TCL_LL_MODIFIER.v.html  TCL_MAX_PREC.v.html  TCL_MINOR_VERSION.v.html  TCL_NO_EVAL.v.html  TCL_ONE_WORD_KEYS.v.html  TCL_PARSE_BAD_NUMBER.v.html  (+1038 more)
src/: completion_code.rs  error.rs  interp.rs  lib.rs  obj.rs  (+1 more)
(+1796 files in other folders)
