[package]
name = "rusty-tcl-sys"
version = "1.1.3"
links = "tcl8.5"

description = "Rust FFI declarations for Tcl"

repository = "https://github.com/PurpleMyst/rusty_tcl"

readme = "README.md"

license = "MIT"

authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]

[build-dependencies]
bindgen = "0.26.3"

[dependencies]
